# ImageMetadataGenerator

./: .gitignore  README.md  Taskfile.yaml  openapi.json
.github/workflows/: deploy.yaml
backend/ImageMetadataGeneratorBackend/: Dockerfile  pyproject.toml
backend/ImageMetadataGeneratorBackend/src/imagemetadatageneratorbackend/: __init__.py  chain.py  error_responses.py  helper.py  main.py  metadata_creation.py  models.py
backend/ImageMetadataGeneratorBackend/tests/: conftest.py  test_api.py  test_metadata_generation.py
